--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.19",
     "@ai-sdk/openai": "^0.0.21",
+    "@pinecone-database/pinecone": "^2.2.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -26,9 +27,10 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.12",
     "@upstash/redis": "^1.30.0",
-    "ai": "^3.1.27",
+    "ai": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cohere-ai": "^7.10.6",
     "embla-carousel-react": "^8.0.0",
     "exa-js": "^1.0.12",
     "katex": "^0.16.10",
