--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.12",
     "@upstash/redis": "^1.30.0",
-    "ai": "^3.2.22",
+    "ai": "^3.2.40",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "embla-carousel-react": "^8.0.0",
+    "drizzle-orm": "^0.32.1",
+    "embla-carousel-react": "^8.1.7",
     "exa-js": "^1.0.12",
     "katex": "^0.16.10",
+    "langfuse": "^3.16.2",
     "lucide-react": "^0.363.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
@@ -51,13 +53,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.3"
+    "typescript": "^5"
   }
 }
