chore: Update .gitignore to exclude .env and .env.local files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mophic",
+  "name": "findwise",
   "version": "0.1.0",
   "private": true,
   "license": "Apache-2.0",
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.12",
     "@upstash/redis": "^1.30.0",
+    "@vercel/postgres": "^0.9.0",
     "ai": "^3.2.40",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -36,10 +37,11 @@
     "katex": "^0.16.10",
     "langfuse": "^3.16.2",
     "lucide-react": "^0.363.0",
-    "next": "^14.2.3",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "ollama-ai-provider": "^0.7.0",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-textarea-autosize": "^8.5.3",
