--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.12",
+    "@upstash/ratelimit": "^2.0.1",
     "@upstash/redis": "^1.30.0",
     "@vercel/postgres": "^0.9.0",
     "ai": "^3.2.40",
